--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>basic HTML CSS sample project</title>
 </head>
 <body>
+
+    <h1>Sample test push github</h1>
+    <h2>Basic HTML and CSS</h2>
+    <h3>New code changed</h3>
+    <h4>check push to github</h4>
+    <h5>This is h5</h5>
     
 </body>
 </html>
